[package]
name = "covid19ks"
version = "0.1.0"
authors = ["John Goerzen <jgoerzen@complete.org>"]
edition = "2018"

[dependencies]
chrono = "0.4"
plotters = {  version = "0.2.15", features = ["chrono"] }
covid19db = "1.1"
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "chrono"] }
tokio = { version = "0.2", features = ["macros"] }
