[package]
name = "covid19ks"
version = "0.1.0"
authors = ["John Goerzen <jgoerzen@complete.org>"]
edition = "2018"

[dependencies]
chrono = {version = "0.4", features = ["serde"] }
covid19db = "2.0"
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "chrono"] }
tokio = { version = "0.2", features = ["macros"] }
plotly = { version = "0.6", features = [] }
serde = { version = "1", features = ["derive"] }
